# Windows_Injector

./: .gitignore  README.md  README_EN.md  REFERENCE_CLONE_REPORT.md  REPOSITORY_LINKS.md  TECHNIQUES_CHECKLIST.md  TECHNIQUE_VERIFICATION.md  clone_references.sh
.claude/: settings.local.json
docs/testing-guides/: 01-process-hollowing.md  02-transacted-hollowing.md  03-process-doppelganging.md  04-process-herpaderping.md  05-process-ghosting.md  06-early-bird-apc.md  07-entry-point-injection.md  08-dll-blocking.md  09-early-cascade.md  10-kernel-callback-table.md  11-advanced-hollowing.md  12-dll-injection.md  13-shellcode-injection.md  14-setwindowshookex-injection.md  15-reflective-dll-injection.md  16-pe-injection.md  17-mapping-injection.md  18-apc-queue-injection.md  19-thread-hijacking.md  20-atom-bombing.md  21-mockingjay.md  22-powerloader-ex.md  23-threadless-inject.md  24-epi.md  25-dll-notification-injection.md  26-module-stomping.md  27-gadget-apc-injection.md  28-process-forking.md  29-function-stomping.md  30-caro-kann.md  31-stack-bombing.md  32-ghost-injector.md  33-ghost-writing.md  34-ghostwriting-2.md  36-setprocess-injection.md  37-poolparty.md  38-thread-namecalling.md  39-waiting-thread-hijacking.md  40-redirect-thread.md  41-ldrshuffle.md
reference/09-earlycascade-injection/: README.md  cascade-injection.sln  cascade-injection.vcxproj  cascade-injection.vcxproj.filters
reference/10-KernelCallbackTable-Injection-PoC/: README.md
reference/16-PE-Injection/: Hooks.asm  InsertProcess.vcxproj  Memory.cpp  Memory.hpp  Pattern.cpp  Pattern.hpp  ProcessInjection.cpp  README.md  Util.cpp  Util.hpp  main.cpp
reference/21-Mockingjay/: MockingJay.sln  rwx_finder.py
reference/22-PowerLoaderEx/: README.md
reference/33-GhostWriting/: gw_ng.c
reference/35-Mapping-Injection/: mapping_injection.vcxproj
reference/40-RedirectThread/: .gitignore  README.md
reference/41-LdrShuffle/: LdrShuffle.sln  README.md
techniques/01-process-hollowing/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/02-transacted-hollowing/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/02-transacted-hollowing/src/: internals.h  pe_utils.c  pe_utils.h  test_payload.c  transacted_hollowing.c
techniques/03-process-doppelganging/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/03-process-doppelganging/src/: internals.h  process_doppelganging.c  test_payload.c
techniques/04-process-herpaderping/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/05-process-ghosting/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/05-process-ghosting/src/: internals.h  process_ghosting.c  test_payload.c
techniques/06-early-bird-apc/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/07-entry-point-injection/: CMakeLists.txt  README.md  build.bat  build.sh
techniques/07-entry-point-injection/src/: entry_point_injection.c  generate_shellcode.c  test_payload.c
techniques/08-dll-blocking/: README.md  build.bat  build_injector.bat  build_shellcode.bat  test_amsi.ps1
techniques/09-early-cascade/: README.md  build.bat  build.sh
techniques/10-kernel-callback-table/: README.md  build.bat  build.sh
techniques/11-advanced-hollowing/: README.md  build.bat  build.sh
techniques/12-dll-injection/: README.md  build.bat  build.sh
techniques/13-shellcode-injection/: README.md  build.bat  build.sh
techniques/14-setwindowshookex-injection/: README.md  build.bat  build.sh
techniques/15-reflective-dll-injection/: README.md  build.bat  build.sh
techniques/16-pe-injection/: README.md  build.bat  build.sh
techniques/17-mapping-injection/: README.md  build.bat  build.sh
techniques/18-apc-queue-injection/: README.md  build.bat  build.sh
techniques/19-thread-hijacking/: README.md  build.bat  build.sh
techniques/20-atom-bombing/: README.md  build.bat  build.sh
techniques/21-mockingjay/: README.md  build.bat  build.sh
techniques/22-powerloader-ex/: README.md  build.bat
techniques/23-threadless-inject/: README.md  build.bat  build.sh
techniques/24-epi/: README.md  build.bat  build.sh
techniques/25-dll-notification-injection/: README.md  build.bat  build.sh
techniques/26-module-stomping/: README.md  build.bat  build.sh  trigger_hook.c
techniques/27-gadget-apc-injection/: README.md  build.bat  build.sh
techniques/28-process-forking/: README.md  build.bat  build.sh  extract_original_shellcode.c
techniques/29-function-stomping/: README.md  build.bat  build.sh  (+1 more)
(+187 files in other folders)
